--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.0.0",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
+    "swiper": "^11.1.4",
     "vue": "^3.4.27",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@nuxt/ui": "^2.16.0",
+    "@nuxtjs/color-mode": "^3.4.1",
     "@pinia/nuxt": "^0.5.1"
   }
 }
