--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^4.0.0",
+    "@types/vue-tel-input": "^2.1.6",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "nuxt": "^3.11.2",
@@ -18,7 +19,8 @@
     "swiper": "^11.1.4",
     "vue": "^3.4.27",
     "vue-chartjs": "^5.3.1",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-tel-input": "^9.1.4"
   },
   "devDependencies": {
     "@nuxt/ui": "^2.16.0",
